# GenPlanner-lib

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/source/: conf.py  errors.rst  genplanner.rst  index.rst  relations.rst  zones.rst
rust/: Cargo.toml
rust/examples/: shlis.rs
rust/src/: lib.rs  loss_topo.rs  polygonmesh2_to_areas.rs  polygonmesh2_to_cogs.rs  voronoi2.rs  vtx2xyz_to_edgevector.rs
scripts/: create_gif.py  sync_version.py
src/genplanner/: __init__.py  _config.py  genplanner.py
src/genplanner/errors/: errors.py
src/genplanner/main/: genplanner.py  init_validation.py
src/genplanner/tasks/: __init__.py  base_splitters.py  block_splitters.py  feat2blocks.py  feat2func.py  feat2parts.py  feat2terr.py  func_zone_splitters.py  gdf_splitters.py  polygon_splitter.py  terr_zone_splitters.py
src/genplanner/utils/: __init__.py  geom_utils.py
src/genplanner/zone_relations/: __init__.py  forbidden_terr_kind.py  relation_matrix.py
src/genplanner/zones/: __init__.py  _basic_func_zones.py  _basic_terr_zones.py  abc_zone.py  basic_zone.py  functional_zones.py  territory_zones.py
src/genplanner/zoning/: __init__.py  abc_zone.py  basic_zone.py  forbidden_matrix.py  functional_zones.py  genplan.py  terr_zones.py  territory_zones.py
