[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "genplanner"
version = "0.1.0"
description = "GenPlanner python+rust library"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "DDonnyy", email = "63115678+DDonnyy@users.noreply.github.com" }
]
dependencies = [
    "tqdm>=4.66.2,<5.0.0",
    "numpy>=2.1.3,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "geopandas>=1.0.0,<2.0.0",
    "loguru>=0.7.2,<1.0.0",
    "scipy>=1.13.1,<2.0.0",
    "pulp>=3.1.1,<4.0.0",
]

[tool.poetry.group.dev.dependencies]
maturin = "^1.11.5"
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
jupyter = "^1.0.0"
contextily = "^1.6.2"
folium = "^0.19.5"
matplotlib = "^3.10.1"
mapclassify = "^2.8.1"
pre-commit = "^4.2.0"



[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "genplanner._rust"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import",
    "line-too-long"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]

