[package]
name = "genplanner-rs"
version = "0.1.2"
edition = "2021"

[lib]
name = "genplanner_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }

nalgebra = "0.33.0"
anyhow = "1.0.86"
candle-core = "0.9.2"
candle-nn = "0.9.2"
del-msh-core = "0.1.39"
del-geo-nalgebra = "0.1.33"


